# gen_ai_framework

./: .env.example  .gitignore  AGENTIC_AI_IMPLEMENTATION_COMPLETE.md  ALL_PHASES_COMPLETE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  setup.sh  test_setup.sh
docs/: ADAPTER_IMPROVEMENTS.md  AGENTIC_AI_FEATURES.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  BATCH_EXPENSE_BILLS_FLOW.md  EXAMPLES_TESTS_CLI_COMPLETE.md  LAYER_SEPARATION.md
examples/: README.md  adapters_example.py  agent_flow_example.py  agent_with_memory.py  agent_with_tools.py  basic_rag.py  chains_example.py  complete_agent_features.py  cost_monitoring_example.py  create_tool_agent_example.py  document_processing.py  error_recovery_example.py  evaluation_example.py  evisa_fill_from_passport.py  graph_example.py  multi_agent_example.py  multi_model_evaluation_example.py  multi_provider_llm.py  persona_example.py  pipeline_example.py  planning_agent_example.py  streaming_agent.py
resources/policy/: approval_rules.txt
scripts/: deepseek_ocr.py  requirements-deepseek-ocr.txt  run_local_llm.py
scripts/batch/: README.md  __init__.py  base.py  batch_expense_bills.py  batch_rag_ingest.py  batch_rag_queries.py  common.py
src/: __init__.py  main.py
src/clients/: __init__.py
src/clients/admin/: __init__.py  router.py
src/clients/agents/: __init__.py  router.py
src/clients/batch/: __init__.py  router.py  runner.py  schemas.py  service.py  validations.py
src/clients/cli/: __init__.py  agent_cli.py  chain_cli.py  rag_agent_cli.py  rag_cli.py
src/clients/documents/: __init__.py  parse_passport.py
src/clients/evaluation/: __init__.py  router.py
src/clients/graph/: __init__.py  router.py
src/clients/onboarding/: __init__.py  router.py
src/clients/prompts/: __init__.py  router.py
src/clients/queue/: __init__.py  router.py
src/clients/tasks/: __init__.py  router.py
src/clients/web_automation/: __init__.py  router.py
src/framework/: __init__.py  config.py  config_nested.py  exceptions.py
src/framework/adapters/: __init__.py  error_recovery.py  errors.py  langchain_adapter.py  langchain_adapter_refactored.py  message_serializer.py  tool_call_parser.py  tool_utils.py
src/framework/agents/: __init__.py  base.py  cost_tracking.py  error_recovery.py  evaluation.py  events.py  executor.py  langchain_agent.py  memory.py  monitoring.py  multi_agent.py  personas.py  planning_agent.py  planning_prompts.py  prompt_builder.py  reflective_agent.py  streaming_agent.py  tool_interpreter.py  tool_registry.py  tools.py
src/framework/api/: __init__.py  app.py  deps.py  deps_agents.py  deps_documents.py  deps_embeddings.py  deps_integrations.py  deps_llm.py  deps_rag.py
src/framework/chains/: __init__.py  base.py  classification_chain.py  (+10 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_agent_features.py  test_agents.py  test_api.py  test_batch_admin_bills.py  test_chains.py  test_chunking.py  test_config.py  test_confluence.py  test_docling.py  test_documents.py  test_evaluation.py  test_graphs.py  test_llm.py  test_observability.py  test_prompts.py  test_rag.py
ui/: __init__.py  app.py  components.py  services.py
ui/pages/: 1_Home.py  2_Batch_Expense.py  2_Gen_AI_Learning.py  3_Agents.py  3_Batch_Expense.py  4_Prompts.py  5_Graph_RAG.py
(+77 files in other folders)
